--- a/polkadot/package.json
+++ b/polkadot/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@polkadot/api": "^9.11.3"
+    "@polkadot/api": "^9.13.2",
+    "@polkadot/keyring": "^10.3.1"
   }
 }
